<resources>
    <string name="app_name">Ethermine Pool Monitor</string>
    <string name="title_activity_main">Ethermine Pool Monitor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="eth_address_hint">Ethereum Wallet Address</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="eth_address_description">Please enter the Ethereum wallet address that you are mining to.</string>
    <string name="dashboard">Dashboard</string>
    <string name="workers">Workers</string>
    <string name="payouts">Payouts</string>
    <string name="calculator">Calculator</string>
    <string name="wallet">Wallet</string>
    <string name="new_wallet">Add New Wallet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hashrates">Hashrates</string>
    <string name="active_workers">Active Workers</string>
    <string name="unpaid_balance">Unpaid Balance</string>
    <string name="reported">Reported</string>
    <string name="current">Current</string>
    <string name="avarage">Avarage</string>
    <string name="shares">Shares (Last 1h)</string>
    <string name="valid">Valid</string>
    <string name="stale">Stale</string>
    <string name="invalid">Invalid</string>
    <string name="last_seen">Last Seen Time</string>
    <string name="current_wallet">Current Wallet</string>
    <string name="rules">Rules</string>
    <string name="my_rules">My Rules</string>
    <string name="change_wallet">Change Wallet</string>
    <string name="create_new_rule">Create New Rule</string>
    <string name="expected_income">Expected Income</string>
    <string name="eth">ETH</string>
    <string name="btc">BTC</string>
    <string name="usd">USD</string>
    <string name="next_payout">Next Payout</string>
    <string name="failed_to_download">Failed to download miner data.\nPlease hit the refresh button to try again.</string>
    <string name="failed_to_parse">Failed to fetch some of the data.\nApplication may produce unexpected results.\nYou may hit the refresh button to make sure that the all data is downloaded.</string>
    <string name="wallet_id_shared_pref_file">com.samet.ethermine.mineridsharedpref</string>
    <string name="unknown">Unknown</string>
    <string name="active_wallet_id">activeMinerId</string>
    <string name="no_wallet_selected">You have not added any wallet id.\nPlease go to add new wallet menu.</string>
    <string name="get_miner_data_url_prefix">https://ethermine.org/api/miner_new/</string>
    <string name="wallet_ids">wallet_ids</string>
    <string name="added_new_wallet_address">Added new wallet address</string>
    <string name="set_active">SET ACTIVE</string>
    <string name="remove">Remove</string>
    <string name="removed_wallet">Succesfully removed the wallet.</string>
    <string name="please_enter_wallet_address">Please enter a valid wallet address</string>
    <string name="changed_active_wallet">Succesfully changed active wallet</string>
    <string name="refresh">Refresh</string>
    <string name="admob_ad_id">ca-app-pub-9214673468712821/2430924907</string>

</resources>
