<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@mipmap/ic_dashboard_black_48dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_workers"
            android:icon="@mipmap/worker"
            android:title="@string/workers" />
        <item
            android:id="@+id/nav_payouts"
            android:icon="@mipmap/ic_attach_money_black_48dp"
            android:title="@string/payouts" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@mipmap/calc"
            android:title="@string/calculator" />
    </group>

    <item android:title="@string/wallet">
        <menu>
            <item
                android:id="@+id/nav_add_wallet"
                android:icon="@mipmap/ic_account_balance_wallet_black_48dp"
                android:title="@string/new_wallet" />

            <item
                android:id="@+id/change_wallet"
                android:icon="@mipmap/ic_account_balance_wallet_black_48dp"
                android:title="@string/change_wallet" />

        </menu>
    </item>


    <item android:title="@string/rules">
        <menu>
            <item
                android:id="@+id/my_rules"
                android:icon="@mipmap/ic_account_balance_wallet_black_48dp"
                android:title="@string/my_rules" />
            <item
                android:id="@+id/new_rule"
                android:icon="@mipmap/ic_account_balance_wallet_black_48dp"
                android:title="@string/create_new_rule" />

        </menu>
    </item>


</menu>
