<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/hashrates_summary_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hashrates_header_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:padding="5dp"
                android:text="@string/hashrates"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="30dp"
                        android:paddingStart="30dp"
                        android:text="@string/current"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="30dp"
                        android:paddingStart="30dp"
                        android:text="@string/reported"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="123 MH/s"
                        android:id="@+id/current_hashrate_val"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="123 MH/s"
                        android:id="@+id/reported_hashrate_val"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/shares_header_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:padding="5dp"
                android:text="@string/shares"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="30dp"
                        android:paddingStart="30dp"
                        android:text="@string/valid"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="30dp"
                        android:paddingStart="30dp"
                        android:text="@string/stale"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="30dp"
                        android:paddingStart="30dp"
                        android:text="@string/invalid"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/valid_shares_val"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/stale_shares_val"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/invalid_shares_val"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/last_seen_text_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:padding="5dp"
                android:text="@string/last_seen"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:id="@+id/last_seen_val"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="15sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>