<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samet.ethermine.etherminepoolmonitor.fragments.DashboardFragment"
    android:weightSum="1">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/hashrates_summary_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hashrates_header_textview"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="25sp"
                android:padding="5dp"
                android:background="@android:color/holo_orange_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hashrates" />

            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@android:color/holo_red_light"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:gravity="center_vertical"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/reported" />

                    <TextView
                        android:textColor="@android:color/holo_blue_light"
                        android:gravity="center_vertical"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/current" />

                    <TextView
                        android:textColor="@android:color/holo_green_dark"
                        android:gravity="center_vertical"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/avarage" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dashboard_reported_hashrate_val"
                        android:textColor="@android:color/holo_red_light"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:id="@+id/dashboard_current_hashrate_val"
                        android:textColor="@android:color/holo_blue_light"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:id="@+id/dashboard_avarage_hashrate_val"
                        android:textColor="@android:color/holo_green_dark"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/active_workers_summary_card"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/active_workers_header_textview"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="25sp"
                android:padding="5dp"
                android:background="@color/fbutton_color_emerald"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active_workers" />
            <TextView
                android:id="@+id/active_workers_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/fbutton_color_emerald"
                android:padding="5dp"
                android:textAlignment="center"
                android:textSize="40sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/unpaid_balance_card"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/unpaid_balance_header_textview"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="25sp"
                android:padding="5dp"
                android:paddingBottom="0dp"
                android:background="@color/fbutton_color_peter_river"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unpaid_balance" />

            <TextView
                android:textColor="@color/fbutton_color_peter_river"
                android:id="@+id/unpaid_balance_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center"
                android:textSize="30sp" />

            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                android:id="@+id/unpaid_progress"
                android:layout_height="10dp"
                android:layout_width="match_parent"
                app:rcProgress="20"
                app:rcMax="100"
                app:rcRadius="0dp"
                app:rcBackgroundColor="@android:color/white"
                app:rcProgressColor="@color/fbutton_color_peter_river"
                app:rcBackgroundPadding="0dp" />





        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/shares_summary_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/shares_header_textview"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="25sp"
                android:padding="5dp"
                android:background="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shares" />

            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@android:color/holo_green_dark"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:gravity="center_vertical"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/valid" />

                    <TextView
                        android:textColor="@android:color/holo_blue_light"
                        android:gravity="center_vertical"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/stale" />

                    <TextView
                        android:textColor="@android:color/holo_red_light"
                        android:gravity="center_vertical"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/invalid" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@android:color/holo_green_dark"
                        android:id="@+id/dashboard_valid_shares_val"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:textColor="@android:color/holo_blue_light"
                        android:id="@+id/dashboard_stale_shares_val"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:textColor="@android:color/holo_red_light"
                        android:id="@+id/dashboard_invalid_shares_val"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>
