<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samet.ethermine.etherminepoolmonitor.fragments.CalculatorFragment">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/expected_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/expected_income_textview"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="25sp"
                android:padding="5dp"
                android:background="@color/fbutton_color_peter_river"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expected_income" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:textSize="25sp"
                android:id="@+id/income_schedule_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@android:color/holo_green_dark"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:gravity="center_vertical"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/eth" />

                    <TextView
                        android:textColor="@android:color/holo_blue_light"
                        android:gravity="center_vertical"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/btc" />

                    <TextView
                        android:textColor="@android:color/holo_red_light"
                        android:gravity="center_vertical"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/usd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@android:color/holo_green_dark"
                        android:id="@+id/eth_per_min_textview"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:textColor="@android:color/holo_blue_light"
                        android:id="@+id/btc_per_min_textview"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:textColor="@android:color/holo_red_light"
                        android:id="@+id/usd_per_min_textview"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/next_payout_card"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/next_payout_header"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="25sp"
                android:padding="5dp"
                android:background="@color/fbutton_color_emerald"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_payout" />

            <TextView
                android:id="@+id/next_payout_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/holo_blue_light"
                android:padding="15dp"
                android:textAlignment="center"
                android:text="asdasd"
                android:textSize="20sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
